--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.1",
+    "geist": "^1.3.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
@@ -56,7 +57,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
